# harpc

./: CMakeLists.txt  compile.sh  main.cpp  run-dist.sh
communication/: CMakeLists.txt  Communicator.h
communication/mpi/: NBFunctionalElement.h  NonBlockingQueue.cpp  NonBlockingQueue.h
data_structures/: CMakeLists.txt  CSRGraph.hpp  DataStructures.h  DataTypes.h  Partition.h  PartitionAccessor.h  Table.h  TableInfo.cpp  TableInfo.h  Utils.h
examples/: CMakeLists.txt
examples/generators/: DataGenerator.cpp  DataGenerator.h
examples/kmeans/: KMeansWorker.cpp  kmeans.cpp
examples/subgraph/: sc-main.cpp
kernels/: CMakeLists.txt  HarpKernels.h
kernels/kmeans/: KMeansCalculator.cpp  KMeansCalculator.h
kernels/math/partitions/: PartitionMath.cpp  PartitionMath.h
kernels/math/table/: TableMath.cpp  TableMath.h
util/: print.h  timing.h
utils/: CMakeLists.txt  timing.h
worker/: CMakeLists.txt  Worker.cpp  Worker.h
